# codesnap

./: .commitlintrc.yml  .gitignore  Cargo.toml  README.md  commitlint.config.ts
.github/: dependabot.yml
.github/workflows/: lint.yml  publish.yml  release-lib.yml  release.yml  upload.yml
cli/: Cargo.toml  config.json
cli/src/: code.rs  code_config.rs  config.rs  egg.rs  highlight.rs  logger.rs  main.rs  range.rs  twitter.rs  watermark.rs  window.rs
core/: Cargo.toml
core/assets/code_themes/: default.themedump
core/assets/theme_configs/: bamboo.json  mei.json
core/assets/themes/: bamboo_theme.json  candy.themedump  default.themedump
core/examples/: ascii.rs  basic.rs  breadcrumbs.rs  command_output.rs  highlight.rs  line_number.rs  simple.rs
core/src/: ansi.rs  assets.rs  components.rs  config.rs  copy.rs  copy_ascii.rs  lib.rs  main.rs  preset_background.rs  preset_themes.rs  save.rs  snapshot.rs  template.rs  themes.rs  utils.rs
core/src/components/: background.rs  breadcrumbs.rs  code_block.rs  command_line.rs  container.rs  editor.rs  highlight_code_block.rs  line_number.rs  rect.rs  row.rs  watermark.rs
core/src/components/command_line/: command_line_header.rs  command_line_output.rs
core/src/components/editor/: code.rs  mac_title_bar.rs  title.rs
core/src/components/interface/: component.rs  render_error.rs  style.rs
core/src/components/layout/: column.rs  row.rs
core/src/edges/: padding.rs
core/src/snapshot/: ascii_snapshot.rs  image_snapshot.rs  snapshot.rs  snapshot_data.rs
core/src/utils/: blur.rs  clipboard.rs  code.rs  color.rs  highlight.rs  path.rs  syntax_provider.rs  text.rs  theme.rs  theme_provider.rs
examples/: cli.sh
schemas/: config.schema.json
wasm/: Cargo.toml  index.html
wasm/src/: ascii_snapshot.rs  image_snapshot.rs  lib.rs
xtask/: Cargo.toml
xtask/schemas/: config.schema.json
xtask/src/: main.rs
