[package]
name = "codesnap-cli"
version = "0.6.2"
edition = "2021"
description = "CLI tools for generating beautiful code snapshots"
license = "MIT"

[[bin]]
name = "codesnap"
path = "src/main.rs"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.91"
clap = { version = "4.5.21", features = ["derive"] }
codesnap = { path = "../core", version = "0.6.2" }
home = "0.5.9"
indicatif = "0.17.9"
serde_json = "1.0.132"
