[package]
name = "codesnap"
version = "0.10.4"
edition = "2021"
description = "Pure Rust library for generating beautiful code snapshots"
license = "MIT"

[dependencies]
tiny-skia = "0.11.4"
syntect = "5.2.0"
cosmic-text = "0.12.0"
serde = "1.0.204"
arboard = { features = ["wayland-data-control"], version = "3.4.0" }
thiserror = "1.0.63"
regex = "1.10.5"
two-face = "0.4.0"
cached = "0.53.1"
anyhow = "1.0.89"
rgb = "0.8.50"
derive_builder = "0.20.2"
chrono = "0.4.38"
base64 = "0.22.1"
once_cell = "1.20.2"
serde_json = "1.0.132"
ansi_term = "0.12.1"
strip-ansi-escapes = "0.2.1"
cansi = "2.2.1"
lazy_static = "1.5.0"
include_dir = "0.7.4"

