[package]
name = "codesnap"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Pure Rust library for generating beautiful code snapshots"
license = "MIT"
repository = "https://github.com/mistricky/CodeSnap"

[dependencies]
tiny-skia = "0.11.4"
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy"] }
cosmic-text = "0.14.2"
serde = "1.0.204"
arboard = { features = ["wayland-data-control"], version = "3.4.0", optional = true }
thiserror = "1.0.63"
regex = "1.10.5"
two-face = { version = "0.4.0", default-features = false, features = ["syntect-fancy"] }
cached = "0.53.1"
anyhow = "1.0.89"
rgb = "0.8.50"
derive_builder = "0.20.2"
chrono = "0.4.38"
base64 = "0.22.1"
serde_json = "1.0.132"
ansi_term = "0.12.1"
strip-ansi-escapes = "0.2.1"
cansi = "2.2.1"
include_dir = "0.7.4"
schemars = "0.8.22"
reqwest = "0.12.15"
mime_guess = "2.0.5"
url = "2.5.4"
hyperpolyglot_fork = { version = "0.1.7", optional = true }

[features]
default = []
copy = ["arboard"]
auto-detect = ["hyperpolyglot_fork"]
full = ["copy", "auto-detect"]

[[example]]
name = "basic"
features = ["copy"]
