[package]
name = "codesnap-wasm"
version = "0.1.0"
authors = ["mist.zzh@gmail.com"]
description = "CodeSnap WASM portal"
license = "MIT"
repository = "https://github.com/mistricky/CodeSnap"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
codesnap = { version = "0.11.5", path = "../core" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
