[package]
name = "codesnap-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "CodeSnap WASM portal"
license = "MIT"
repository = "https://github.com/mistricky/CodeSnap"

[lib]
crate-type = ["cdylib"]

[dependencies]
codesnap = { version = "0.12.0", path = "../core" }
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.100"
